--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,6 @@
     font-family: "Montserrat", sans-serif;
 }
 
-
 header{
     z-index: 999;
     position: absolute;
@@ -183,7 +182,58 @@ header .burger{
     display: none;
 }
 
-@media(max-width: 1040px){
+#welcome_heading{
+    font-weight: bold;
+    font-family: "Montserrat", sans-serif;
+    font-size: 60px;
+}
+
+hr{
+    background: linear-gradient(90deg, rgba(8,88,236,1) 0%, rgba(78,224,22,1) 33%, rgba(224,235,32,1) 66%, rgba(235,32,54,1) 100%);
+    height: 5px;
+    opacity: 100;
+}
+
+.values{
+    background-color: #1877F2; 
+    color: #fff;
+}
+
+.slide-img{
+   height: 466px;
+}
+
+.slide-content{
+    text-shadow: 2px 2px #222;
+}
+
+.swiper-button-next, .swiper-button-prev{
+    background-color: #fff;
+    padding: 30px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; 
+}
+
+.swiper-pagination{
+    margin-bottom: -1%;
+}
+
+.card{
+    border-radius: 20px;
+}
+
+footer{
+    position: relative;
+    width: 100%;
+    background: #3586ff;
+    min-height: 100px;
+    margin-top: 100px;
+    padding: 20px 50px;
+    bottom: 0px;
+    display: block;
+    color: #fff;
+}
+
+@media (max-width: 1040px){
     header{
         padding: 12px 20px;
     }
@@ -252,74 +302,6 @@ header .burger{
     }
 }
 
-#welcome_heading{
-    font-weight: bold;
-    font-family: "Poppins", sans-serif;
-    font-size: 60px;
-}
-
-hr{
-    background: linear-gradient(90deg, rgba(8,88,236,1) 0%, rgba(78,224,22,1) 33%, rgba(224,235,32,1) 66%, rgba(235,32,54,1) 100%);
-    height: 5px;
-    opacity: 100;
-}
-
-.values{
-    background-color: #1877F2; 
-    color: #fff;
-}
-
-.slide-img{
-   height: 466px;
-}
-
-.slide-content{
-    text-shadow: 2px 2px #222;
-}
-
-.swiper-button-next, .swiper-button-prev{
-    background-color: #fff;
-    padding: 30px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; 
-}
-
-.swiper-pagination{
-    margin-bottom: -1%;
-}
-
-.card{
-    border-radius: 20px;
-}
-
-footer{
-    position: relative;
-    width: 100%;
-    background: #3586ff;
-    min-height: 100px;
-    margin-top: 100px;
-    padding: 20px 50px;
-    bottom: 0px;
-    display: block;
-    color: #fff;
-}
-
-footer .wave{
-    position: absolute;
-    top: -100px;
-    left: 0;
-    width: 100%;
-    height: 100px;
-    background-image: url("../images/wave.png");
-    background-size: 1000px 100px;
-}
-
-footer .wave#wave1{
-    z-index: 1000;
-    opacity: 1;
-    bottom: 0;
-    animation: animateWave 4s linear infinite;
-}
-
 .responsive-iframe {
     top: 0;
     left: 0;
@@ -327,18 +309,8 @@ footer .wave#wave1{
     right: 0;
     width: 100%;
     height: 100%;
-  }
+  } */
 
-
-@keyframes animateWave
-{
-    0%{
-        background-position-x: 1000px;
-    }
-    100%{
-        background-position-x: 0px;
-    }
-}
 
 #wrap_id{
     white-space:pre-wrap;
