--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -189,8 +189,9 @@ header .burger{
 }
 
 hr{
-    background: linear-gradient(90deg, rgba(8,88,236,1) 0%, rgba(78,224,22,1) 33%, rgba(224,235,32,1) 66%, rgba(235,32,54,1) 100%);
+    width: 500;
     height: 5px;
+    color: rgba(128, 128, 128, 0.411);
     opacity: 100;
 }
 
@@ -224,9 +225,9 @@ hr{
 footer{
     position: relative;
     width: 100%;
-    background: #3586ff;
+    background: #f7d665;
     min-height: 100px;
-    margin-top: 100px;
+    /* margin-top: 100px; */
     padding: 20px 50px;
     bottom: 0px;
     display: block;
@@ -308,10 +309,28 @@ footer{
     bottom: 0;
     right: 0;
     width: 100%;
-    height: 100%;
-  } */
+    height: 60%;
+  }
 
 
 #wrap_id{
     white-space:pre-wrap;
 }
+
+.contact-icon{
+    color: #ffff;
+    font-size: 50px;
+    padding: 2px;
+    margin-bottom: 10%;
+}
+
+.contact-text{
+    font-size: 15px;
+    color: #ffff;
+}
+
+#contact {
+    background: #1877F2;
+}
+
+
