--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,345 +1,343 @@
 @import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700);
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Montserrat", sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
 }
 
-header{
-    z-index: 999;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 100px;
-    transition: 0.5s ease;
-
+header {
+  z-index: 999;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 100px;
+  transition: 0.5s ease;
 }
 
-header .navbar-brand{
-    color: #3b83cd;
-    font-size: 1.5em;
-    font-weight: 700;
-    text-transform: uppercase;
-    text-decoration: none;
+header .navbar-brand {
+  color: #3b83cd;
+  font-size: 1.5em;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: none;
 }
 
-header .navbar-brand:hover{
-    color: #3b83cd;
+header .navbar-brand:hover {
+  color: #3b83cd;
 }
 
-header .navigation{
-    position: relative;
-
+header .navigation {
+  position: relative;
 }
 
 .header.header-scrolled {
-    background: #fff;
-    box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
+  background: #fff;
+  box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
 }
 
-header .navigation .navigation-items a{
-    position: relative;
-    color: #3b83cd;
-    font-size: 1em;
-    font-weight: 500;
-    text-decoration: none;
-    margin-left: 30px;
-    transition: 0.3s ease;
-    display:inline-block;
+header .navigation .navigation-items a {
+  position: relative;
+  color: #3b83cd;
+  font-size: 1em;
+  font-weight: 500;
+  text-decoration: none;
+  margin-left: 30px;
+  transition: 0.3s ease;
+  display: inline-block;
 }
 
-header .navigation .navigation-items a:before{
-    content: '';
-    position: absolute;
-    background: rgb(8,88,236);
-    background: #f7d665;
-    width: 0;
-    height: 3px;
-    bottom: 0;
-    left: 0;
-    transition: 0.3s ease;
-} 
-
-header .navigation .navigation-items a:hover:before{
-    width: 100%;
+header .navigation .navigation-items a:before {
+  content: "";
+  position: absolute;
+  background: rgb(8, 88, 236);
+  background: #f7d665;
+  width: 0;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  transition: 0.3s ease;
 }
 
-section{
-    padding: 100px 100px;
-    overflow: hidden;
+header .navigation .navigation-items a:hover:before {
+  width: 100%;
 }
 
-.home{
-    position: relative;
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    background: #1877F2;
+section {
+  padding: 100px 100px;
+  overflow: hidden;
 }
 
-.home:before{
-    z-index: 777;
-    content: '';
-    position: absolute;
-    /* background-color: transparent;
+.home {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background: #1877f2;
+}
+
+.home:before {
+  z-index: 777;
+  content: "";
+  position: absolute;
+  /* background-color: transparent;
     background-image: linear-gradient(180deg, #000000 31%, #1877F2 100%);
     opacity: 0.69;
     transition: background 0.3s, border-radius 0.3s, opacity 0.3s; */
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.home .content {
+  z-index: 888;
+  color: #3b83cd;
+  width: 70%;
+  margin-top: 50px;
+}
+
+.home .content h1 {
+  font-size: 4em;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  line-height: 75px;
+  margin-bottom: 40px;
+  /* text-shadow: -1px 0px 24px rgb(0 0 0 / 60%); */
+}
+
+.home .content h2 {
+  font-size: 1.5em;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  /* text-shadow: -1px 0px 24px rgb(0 0 0 / 60%); */
+}
+
+.home .content h1 span {
+  font-size: 1.2em;
+  font-weight: 600;
+}
+
+.home .content p {
+  margin-bottom: 45px;
+}
+
+.home .content a {
+  background: #f7d665;
+  padding: 15px 35px;
+  color: #fff;
+  font-size: 1.1em;
+  font-weight: 500;
+  text-decoration: none;
+  border-radius: 2px;
+}
+
+.home .media-icons {
+  z-index: 888;
+  position: absolute;
+  right: 30px;
+  display: flex;
+  flex-direction: column;
+  transition: 0.5s ease;
+}
+
+.home .media-icons a {
+  color: #f7d665;
+  font-size: 1.6em;
+  transition: 0.3s ease;
+}
+
+.home .media-icons a:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.home .media-icons a:hover {
+  transform: scale(1.3);
+}
+
+.home video {
+  z-index: 000;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+header .burger {
+  display: none;
+}
+
+#welcome_heading {
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+  font-size: 60px;
+}
+
+hr {
+  width: 500;
+  height: 5px;
+  color: rgba(128, 128, 128, 0.411);
+  opacity: 100;
+}
+
+.values {
+  background-color: #1877f2;
+  color: #fff;
+}
+
+.slide-img {
+  height: 466px;
+}
+
+.slide-content {
+  text-shadow: 2px 2px #222;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  background-color: #fff;
+  padding: 30px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.swiper-pagination {
+  margin-bottom: -1%;
+}
+
+.card {
+  border-radius: 20px;
+}
+
+footer {
+  position: relative;
+  width: 100%;
+  background: #f7d665;
+  min-height: 100px;
+  /* margin-top: 100px; */
+  padding: 20px 50px;
+  bottom: 0px;
+  display: block;
+  color: #fff;
+}
+
+@media (max-width: 1040px) {
+  header {
+    padding: 12px 20px;
+  }
+
+  section {
+    padding: 12px 20px;
+  }
+
+  header .navigation {
+    display: none;
+  }
+
+  header .navigation.active {
+    position: fixed;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     top: 0;
     left: 0;
-}
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(1, 1, 1, 0.5);
+  }
 
-.home .content{
-    z-index: 888;
-    color: #3b83cd;
-    width: 70%;
-    margin-top: 50px;
-}
+  header .burger {
+    display: block;
+  }
 
-.home .content h1{
-    font-size: 4em;
-    font-weight: 900;
-    text-transform: uppercase;
-    letter-spacing: 5px;
-    line-height: 75px;
-    margin-bottom: 40px;
-    /* text-shadow: -1px 0px 24px rgb(0 0 0 / 60%); */
-}
-
-.home .content h2{
-    font-size: 1.5em;
-    font-weight: 900;
-    text-transform: uppercase;
-    letter-spacing: 5px;
-    /* text-shadow: -1px 0px 24px rgb(0 0 0 / 60%); */
-}
-
-.home .content h1 span{
+  header .navigation .navigation-items a {
+    color: #222;
     font-size: 1.2em;
-    font-weight: 600;
+    margin: 20px;
+  }
 
-}
+  header .navigation .navigation-items a:before {
+    background: #222;
+    height: 5px;
+  }
 
-.home .content p{
-    margin-bottom: 45px;
-} 
-
-.home .content a{
-    background: #f7d665;
-    padding: 15px 35px;
-    color: #fff;
-    font-size: 1.1em;
-    font-weight: 500;
-    text-decoration: none;
-    border-radius: 2px;
-} 
-
-.home .media-icons{
-    z-index: 888;
-    position: absolute;
-    right: 30px;
+  header .navigation.active .navigation-items {
+    background: #3b83cd;
+    width: 600px;
+    max-width: 600px;
+    margin: 20px;
+    padding: 40px;
     display: flex;
     flex-direction: column;
-    transition: 0.5s ease;
-}
+    align-items: center;
+    border-radius: 5px;
+    box-shadow: 0 5px 25px rgb(1 1 1 / 20%);
+  }
 
-.home .media-icons a{
-    color: #f7d665;
-    font-size: 1.6em;
+  .menu-btn {
+    color: #3b83cd;
+    padding: 5px;
+    align-content: center;
+    font-size: 30px;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
     transition: 0.3s ease;
-}
+  }
 
-.home .media-icons a:not(:last-child){
-    margin-bottom: 20px;
-}
-
-.home .media-icons a:hover{
-    transform: scale(1.3);
-}
-
-.home video{
-    z-index: 000;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-
-}
-
-header .burger{
-    display: none;
-}
-
-#welcome_heading{
-    font-weight: bold;
-    font-family: "Montserrat", sans-serif;
-    font-size: 60px;
-}
-
-hr{
-    width: 500;
-    height: 5px;
-    color: rgba(128, 128, 128, 0.411);
-    opacity: 100;
-}
-
-.values{
-    background-color: #1877F2; 
-    color: #fff;
-}
-
-.slide-img{
-   height: 466px;
-}
-
-.slide-content{
-    text-shadow: 2px 2px #222;
-}
-
-.swiper-button-next, .swiper-button-prev{
-    background-color: #fff;
-    padding: 30px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; 
-}
-
-.swiper-pagination{
-    margin-bottom: -1%;
-}
-
-.card{
-    border-radius: 20px;
-}
-
-footer{
-    position: relative;
-    width: 100%;
-    background: #f7d665;
-    min-height: 100px;
-    /* margin-top: 100px; */
-    padding: 20px 50px;
-    bottom: 0px;
-    display: block;
-    color: #fff;
-}
-
-@media (max-width: 1040px){
-    header{
-        padding: 12px 20px;
-    }
-
-    section{
-        padding: 12px 20px;
-    }
-
-    header .navigation{
-        display: none;
-    }
-
-    header .navigation.active{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        top: 0;
-        left: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: rgba(1,1,1,0.5);
-    }
-
-    header .burger{
-        display: block;
-    }
-
-    header .navigation .navigation-items a{
-        color: #222;
-        font-size: 1.2em;
-        margin: 20px;
-    } 
-
-    header .navigation .navigation-items a:before{
-        background: #222;
-        height: 5px;
-    }
-
-    header .navigation.active .navigation-items{
-        background: #3b83cd;
-        width: 600px;
-        max-width: 600px;
-        margin: 20px;
-        padding: 40px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        border-radius: 5px;
-        box-shadow: 0 5px 25px rgb(1 1 1 / 20%);
-    }
-
-    .menu-btn{
-        color: #3b83cd;
-        padding: 5px;
-        align-content: center;
-        font-size: 30px;
-        width: 40px;
-        height: 40px;
-        cursor: pointer;
-        transition: 0.3s ease;
-    }
-
-    .menu-btn.active{
-        z-index: 999;
-    }
+  .menu-btn.active {
+    z-index: 999;
+  }
 }
 
 .responsive-iframe {
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    height: 60%;
-  }
-
-
-#wrap_id{
-    white-space:pre-wrap;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 60%;
 }
 
-.contact-icon{
-    color: #ffff;
-    font-size: 50px;
-    padding: 2px;
-    margin-bottom: 10%;
+#wrap_id {
+  white-space: pre-wrap;
 }
 
-.contact-text{
-    font-size: 15px;
-    color: #ffff;
+.contact-icon {
+  color: #ffff;
+  font-size: 50px;
+  padding: 2px;
+  margin-bottom: 10%;
+}
+
+.contact-text {
+  font-size: 15px;
+  color: #ffff;
 }
 
 #contact {
-    background: #1877F2;
+  background: #1877f2;
 }
 
 #AboutTitle {
-    text-align: Left;
-    color:#1877F2;
-    font-weight: bold;
-    margin-top: 10%;
-    margin-bottom: 1%;
-    font-size: 70px
+  text-align: Left;
+  color: #1877f2;
+  font-weight: bold;
+  margin-top: 10%;
+  margin-bottom: 1%;
+  font-size: 70px;
 }
 
-
+#result_content {
+    align-content: center;
+}
