"Remove Background color of home page"

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -80,7 +80,7 @@ section {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background: #1877f2;
+  /* background: #1877f2; */
 }
 
 .home:before {
