--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10893,7 +10893,7 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
   }
 }
 
-@media only screen and (max-width: 360px) {
+@media only screen and (min-width: 360px) {
   #sidebar-wrapper {
     margin-left: 0;
   }
